syntax = "proto3";

package file_processing;

option go_package = "file-processing-api/gen/file";

service FileProcessing {
  rpc GetFiles(GetFilesRequest) returns (GetFilesResponse);
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc GetFileByID(GetFileByIDRequest) returns (GetFileByIDResponse);
  rpc SearchFile(SearchFileRequest) returns (SearchFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}


message GetFilesRequest {
  string user_id = 2;
}

message File {
  string file_id = 1;
  string file_name = 2;
  string file_size = 3;
  string mime_type = 4;
  string extension = 5;
  string create_at = 6;
}

message GetFilesResponse {
  repeated File files = 1;
}


message UploadFileRequest {
  string user_id = 1;
  string filename = 2;
  bytes chunk = 3;
}


message UploadFileResponse {
  string message = 1;
  string file_id = 2;
}

message GetFileByIDRequest {
  string file_id = 1;
  string user_id = 2;
}

message GetFileByIDResponse {
  string file_id = 1;
  string file_name = 2;
  string file_size = 3;
  string mime_type = 4;
  string extension = 5;
  string create_at = 6;
  bytes content = 7;
}

message SearchFileRequest {
  string file_id = 1;
  string search_term = 2;
  string user_id = 3;
}


message SearchFileResponse {
  repeated string results = 1;
}


message DownloadFileRequest {
  string file_id = 1;
  string user_id = 2;
}

message DownloadFileResponse {
  string name = 1;
  string mime_type = 2;
  bytes content = 3;
}


message DeleteFileRequest {
  string file_id = 1;
  string user_id = 2;
}


message DeleteFileResponse {
  string message = 1;
}
