package fileProcessing

import (
	"fmt"
	"github.com/gofiber/fiber/v3"
	"gitlab.crja72.ru/golang/2025/spring/course/projects/go21/api-gateway/config"
	pb "gitlab.crja72.ru/golang/2025/spring/course/projects/go21/api-gateway/gen/fileProcessing"
	"io"
)

type UploadFileRequest struct {
	Filename string
	Chunk    []byte
}

func UploadFile(c fiber.Ctx, client *ServiceClientFileProcessing) error {
	fileHeader, err := c.FormFile("file")
	if err != nil {
		return c.Status(fiber.StatusBadRequest).SendString("–§–∞–π–ª –Ω–µ –ø–æ–ª—É—á–µ–Ω")
	}

	file, err := fileHeader.Open()
	if err != nil {
		return c.Status(fiber.StatusInternalServerError).SendString("–ù–µ —É–¥–∞–ª–æ—Å—å –æ—Ç–∫—Ä—ã—Ç—å —Ñ–∞–π–ª")
	}
	defer file.Close()

	// –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ gRPC
	stream, err := client.Client.UploadFile(c.Context())
	if err != nil {
		return c.Status(fiber.StatusInternalServerError).SendString("–û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ gRPC")
	}

	buf := make([]byte, 1024*32) // 32KB —á–∞–Ω–∫–∏
	first := true
	for {
		n, err := file.Read(buf)
		if err == io.EOF {
			break
		}
		if err != nil {
			return c.Status(fiber.StatusInternalServerError).SendString("–û—à–∏–±–∫–∞ –ø—Ä–∏ —á—Ç–µ–Ω–∏–∏ —Ñ–∞–π–ª–∞")
		}

		req := &pb.UploadFileRequest{
			Chunk: buf[:n],
		}

		// üî∏ –î–æ–±–∞–≤–ª—è–µ–º –∏–º—è —Ç–æ–ª—å–∫–æ –≤ –ø–µ—Ä–≤–æ–º —á–∞–Ω–∫–µ
		if first {
			req.Filename = fileHeader.Filename
			first = false
		}

		if err := stream.Send(req); err != nil {
			return c.Status(fiber.StatusInternalServerError).SendString("–û—à–∏–±–∫–∞ –ø—Ä–∏ –æ—Ç–ø—Ä–∞–≤–∫–µ —á–∞–Ω–∫–∞")
		}
	}

	// –ó–∞–≤–µ—Ä—à–∞–µ–º –∏ –ø–æ–ª—É—á–∞–µ–º –æ—Ç–≤–µ—Ç
	resp, err := stream.CloseAndRecv()
	if err != nil {
		return c.Status(fiber.StatusInternalServerError).SendString("–û—à–∏–±–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è gRPC —Å—Ç—Ä–∏–º–∞")
	}

	return c.SendString(fmt.Sprintf("–§–∞–π–ª %s –∑–∞–≥—Ä—É–∂–µ–Ω. –û—Ç–≤–µ—Ç: %s", fileHeader.Filename, resp.Message))
}

func RegisterRoutes(app *fiber.App, c *config.Config) *ServiceClientFileProcessing {
	svc := &ServiceClientFileProcessing{
		Client: InitServiceClient(c),
	}

	fileProcessing := app.Group("/fileProcessing")

	fileProcessing.Post("/UploadFile", func(c fiber.Ctx) error {
		return UploadFile(c, svc)
	})

	return svc
}
